- Improvement: Updates guava from 21.0 to 33.2.1-jre [#qubIT-Omnis-5869]
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2587]

7.19.0 (05-08-2024)
- Refactor: Remove legacy evaluation season and temporary enrolment logic [#qubIT-Fenix-5554]

7.18.0 (27-06-2024)
- Refactor: Uses ExcelUtil to handle excel files [#qubIT-Omnis-6065]

7.17.0 (17-06-2024)
- Refactor: Updates ff dependency [#qubIT-Omnis-4749]

7.16.0 (04-06-2024)
- Refactor: Move to this module, Dandelion configurations from fenixedu-candidacies-extensions and fenixedu-base web-fragment [#qubIT-Omnis-5884]

7.15.3 (27-05-2024)
- Refactor: Removes unnecessary jsps [#qubIT-Omnis-5850]

7.15.2 (24-05-2024)
- Refactor: Change internal source credits label [#qubIT-Fenix-5327]

7.15.1 (22-05-2024)
- Bug fix: Introducing spring functionality loader for package com.qubit.qubEdu.module.base [#UL-REIT-3983]

7.15.0 (20-05-2024)
- Refactor: Uses fullAvatarUrl for avatarUrl refactoring [#qubIT-Omnis-5848]

7.14.0 (15-05-2024)
- Refactor: Adds remaining academic spring classes [#qubIT-Omnis-5807]

7.13.0 (15-05-2024)
- Refactor: Adds legal pt spring controllers [#qubIT-Omnis-5831]

7.12.0 (09-05-2024)
- Refactor: Move Spring controllers from fenixedu-candidacies-extensions [#qubIT-Omnis-5757]

7.11.0 (30-04-2024)
- Refactor: Adds HelpdeskEntrypointController [#qubIT-Omnis-5784]

7.10.0 (30-04-2024)
- Refactor: Uses new photo controller url in jsp [#qubIT-Omnis-5783]

7.9.2 (30-04-2024)
- Bug fix: Adding class that uses @BennuSpringModule to register spaces controllers [#qubIT-Omnis-5811]

7.9.1 (29-04-2024)
- Refactor: Add missing fenixedu-spaces UI css and js [#qubIT-Omnis-5753]

7.9.0 (17-04-2024)
- Refactor: Add fenixedu-spaces UI controllers and views [#qubIT-Omnis-5753]

7.8.0 (17-04-2024)
- Refactor: Removes zip4j dependency [#qubIT-Omnis-5739]

7.7.0 (03-04-2024)
- Improvement: Modified how StudentActive operates regarding first year first time students [#UL-FF-3273]
